<resources>
    <string name="app_name">EasyChat</string>
    <string name="text_button_send">Send</string>
    <string name="prompt_message">Write a message ...</string>
    <string name="action_send">Send a message</string>
    <string name="layout_log_pseudo">Pseudo</string>
    <string name="layout_log_mdp">Password</string>
    <string name="layout_log_login">Log in</string>
    <string name="layout_log_inscription">Subscribe</string>
    <string name="layout_log_button_join">Join</string>
    <string name="incorrect_pseudo_or_password">Pseudo or password incorrect</string>
    <string name="already_exist_pseudo">Pseudo already exist</string>
    <string name="need_fields_pseudo_password">Need fields pseudo and password</string>
    <string name="layout_log_image_logo_description">Icon application</string>
    <string name="layout_user_connect_description">light connection indicator</string>
    <string name="action_open_gallery">Open gallery</string>
    <string name="action_open_camera">Open camera</string>
    <string name="layout_setting_setPictureProfile">Change profile picture</string>
    <string name="layout_setting_setPseudo">Change your pseudo</string>
    <string name="layout_setting_setPassword">Change your password</string>
    <string name="layout_setting_about">About</string>
    <string name="layout_setting_unsubscribe">Unsubscribe</string>
    <string name="unsubscribe_text">All your data will be delete</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="about_authors">Authors : \nGuillaume VELAY \nBadr HERRESS \n\nI.T. Master \nUniversity of Montpellier \n2015 - 2016</string>
    <string name="be_unsubscribe">You are now unsubscribe</string>
    <string name="fail_unsubscribe">Fail to unsubscribe</string>
    <string name="notification_message_from">Message from</string>
    <string name="notification_a_picture">a picture</string>
    <string name="save_picture">Save picture</string>
    <string name="new_pseudo">New pseudo</string>
    <string name="empty_pseudo">Empty pseudo</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="incor_old_pwd_or_new_pwd">Incorrect old password or new password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="inc_pwd_or_pseudo">Incorrect password or pseudo</string>
    <string name="layout_setting_setDescription">Change your description</string>
    <string name="new_description">New description</string>
    <string name="layout_description">Description</string>
    <string name="user_profile">User profile</string>
</resources>
