<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
	android:background="@drawable/background"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

   <ListView 
       android:id="@+id/list_view_message"
	   android:clickable="true"
	   android:focusable="true"
       android:layout_width="match_parent"
       android:layout_height="0dp"
	   android:layout_weight="1"
	   android:divider="@null"
	   android:listSelector="@android:color/transparent" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="5dp">

		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:id="@+id/button_open_gallery"
			android:layout_gravity="right"
			android:src="@drawable/ic_insert_photo_black_36dp"
			android:contentDescription="@string/action_open_gallery"
			android:layout_marginRight="10dp"
			android:background="@android:color/transparent" />

		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:id="@+id/button_open_camera"
			android:layout_gravity="right"
			android:src="@drawable/ic_photo_camera_black_36dp"
			android:contentDescription="@string/action_open_camera"
			android:layout_marginRight="10dp"
			android:background="@android:color/transparent" />


	</LinearLayout>

	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="10dp"
		android:paddingRight="10dp">

	    <EditText
	        android:layout_width="0dp"
			android:layout_weight="1"
	        android:layout_height="fill_parent"
	        android:inputType="textMultiLine"
	        android:id="@+id/chat"
			android:layout_gravity="left"
	        android:hint="@string/prompt_message"
			android:background="@android:color/transparent"
			android:lines="2" />

	    <ImageButton
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:id="@+id/button_send"
			android:layout_gravity="right"
	        android:src="@drawable/ic_send_black_36dp"
	        android:contentDescription="@string/action_send"
			android:background="@android:color/transparent" />

	</LinearLayout>

</LinearLayout>