<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp">

            <RadioButton android:id="@+id/se_connecter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_log_login"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/inscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_log_inscription"
                android:onClick="onRadioButtonClicked"
                android:layout_marginLeft="60dp"/>
        </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chat_black_36dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/layout_log_image_logo_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_perm_identity_black_36dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/layout_log_pseudo"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pseudoLog_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/pseudoLog"
                    android:textColor="@color/log_color_pseudo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/layout_log_pseudo"
                    android:layout_marginLeft="@dimen/layout_log_space_image_pseudo" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_log_margin_pseudo"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vpn_key_black_36dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/layout_log_mdp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mdpLog_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/mdpLog"
                    android:textColor="@color/log_color_mdp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/layout_log_mdp"
                    android:layout_marginLeft="@dimen/layout_log_space_image_pseudo"
                    android:typeface="normal"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_log_button_join"
        android:id="@+id/boutonConnexion"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"/>

    </LinearLayout>
